Allow consigne actions panel to escape collapsed container

--- a/index.html
+++ b/index.html
@@ -582,6 +582,9 @@
       overflow:hidden;
       transition:height .2s ease, opacity .2s ease;
     }
+    .consigne-card--open .consigne-card__content {
+      overflow:visible;
+    }
     .consigne-card__toolbar {
       display:flex;
       justify-content:flex-end;
