--- a/index.html
+++ b/index.html
@@ -772,10 +772,18 @@
     .priority-surface {
       position:relative;
     }
+    .priority-chip {
+      display:inline-flex;
+      align-items:center;
+      margin-left:.35rem;
+      font-size:.95rem;
+      line-height:1;
+      color:#facc15;
+    }
     .priority-surface-high {
-      background:#f9fafb;
-      border:2px solid #1f2937;
-      box-shadow:0 8px 24px rgba(15,23,42,0.18);
+      background:#fffbeb;
+      border:1px solid rgba(250,204,21,.35);
+      box-shadow:none;
     }
     .priority-surface-medium {
       background:#ffffff;
@@ -788,9 +796,9 @@
     }
 
     .consigne-card.priority-surface-high {
-      background:#f9fafb;
-      border:2px solid #1f2937;
-      box-shadow:0 8px 24px rgba(15,23,42,0.18);
+      background:#fffbeb;
+      border:1px solid rgba(250,204,21,.35);
+      box-shadow:none;
     }
     .consigne-card.priority-surface-low {
       background:#f8fafc;
