--- a/index.html
+++ b/index.html
@@ -904,9 +904,15 @@
       border-color:#e2e8f0;
     }
 
-    .consigne-card.consigne-card--likert-positive {
+    .consigne-card.consigne-card--likert-positive,
+    .consigne-card.consigne-card--likert-positive-strong {
       background-color:rgba(34,197,94,.22);
-      border-color:rgba(22,163,74,.6);
+      border-color:rgba(21,128,61,.7);
+    }
+
+    .consigne-card.consigne-card--likert-positive-soft {
+      background-color:rgba(187,247,208,.32);
+      border-color:rgba(74,222,128,.6);
     }
 
     .consigne-card.consigne-card--likert-neutral {
@@ -914,7 +920,13 @@
       border-color:rgba(202,138,4,.6);
     }
 
-    .consigne-card.consigne-card--likert-negative {
+    .consigne-card.consigne-card--likert-negative-soft {
+      background-color:rgba(254,202,202,.32);
+      border-color:rgba(248,113,113,.55);
+    }
+
+    .consigne-card.consigne-card--likert-negative,
+    .consigne-card.consigne-card--likert-negative-strong {
       background-color:rgba(248,113,113,.24);
       border-color:rgba(220,38,38,.65);
     }
