Réorganise l’entête des cartes de consigne

--- a/index.html
+++ b/index.html
@@ -533,21 +533,18 @@
       box-shadow:0 1px 0 rgba(15,23,42,.08);
     }
     .consigne-card__header {
-      display:grid;
-      grid-template-columns:minmax(0,1fr) auto auto;
-      grid-template-areas:"title meta aside";
+      display:flex;
+      flex-wrap:wrap;
       align-items:center;
-      column-gap:.75rem;
-      row-gap:.35rem;
+      gap:.3rem .45rem;
       min-height:2.5rem;
     }
     .consigne-card__toggle {
-      grid-area:title;
-      display:flex;
+      display:inline-flex;
       align-items:center;
-      gap:.5rem;
       justify-content:flex-start;
-      width:100%;
+      gap:.45rem;
+      flex:1 1 12rem;
       min-width:0;
       background:none;
       border:none;
@@ -557,6 +554,7 @@
       color:inherit;
       text-align:left;
       cursor:pointer;
+      flex-wrap:wrap;
     }
     .consigne-card__toggle::after {
       content:"▾";
@@ -579,12 +577,11 @@
       min-width:0;
       word-break:break-word;
     }
-    .consigne-card__meta {
-      grid-area:meta;
-      display:flex;
+    .consigne-card__inline-meta {
+      display:inline-flex;
       align-items:center;
-      justify-content:flex-start;
-      gap:.4rem;
+      gap:.3rem;
+      flex:0 0 auto;
       min-width:0;
       cursor:pointer;
     }
@@ -607,15 +604,14 @@
       color:var(--muted);
       font-weight:500;
     }
-    .consigne-card__aside {
-      grid-area:aside;
-      display:flex;
+    .consigne-card__inline-tools {
+      display:inline-flex;
       align-items:center;
-      gap:.5rem;
-      justify-content:flex-end;
-      justify-self:end;
+      gap:.3rem;
+      flex:0 0 auto;
+      flex-wrap:wrap;
     }
-    .consigne-card__aside > * {
+    .consigne-card__inline-tools > * {
       flex-shrink:0;
     }
     .consigne-card__field-store {
@@ -623,19 +619,14 @@
     }
     @media (max-width: 640px) {
       .consigne-card__header {
-        grid-template-columns:minmax(0,1fr) auto;
-        grid-template-areas:
-          "title aside"
-          "meta aside";
         align-items:flex-start;
+        gap:.35rem .5rem;
       }
-      .consigne-card__meta {
-        flex-direction:column;
-        align-items:flex-start;
-        gap:.35rem;
+      .consigne-card__inline-tools {
+        gap:.3rem;
       }
       .consigne-card__value {
-        width:100%;
+        width:auto;
         max-width:100%;
         justify-content:flex-start;
       }
@@ -678,7 +669,7 @@
     .consigne-picker__options {
       display:flex;
       flex-direction:column;
-      gap:.35rem;
+      gap:.3rem;
     }
     .consigne-picker__option {
       display:flex;
