--- a/index.html
+++ b/index.html
@@ -897,10 +897,13 @@
     .priority-chip {
       display:inline-flex;
       align-items:center;
-      margin-left:.35rem;
+      justify-content:center;
+      margin-left:0;
+      margin-right:.35rem;
       font-size:.95rem;
       line-height:1;
       color:#facc15;
+      vertical-align:middle;
     }
     .priority-surface-high {
       background:#fffbeb;
