--- a/index.html
+++ b/index.html
@@ -533,18 +533,21 @@
       box-shadow:0 1px 0 rgba(15,23,42,.08);
     }
     .consigne-card__header {
+      min-height:2.5rem;
+    }
+    .consigne-card__header-row {
       display:flex;
       flex-wrap:wrap;
       align-items:center;
-      gap:.3rem .45rem;
-      min-height:2.5rem;
+      gap:.35rem .45rem;
+      width:100%;
     }
     .consigne-card__toggle {
       display:inline-flex;
       align-items:center;
       justify-content:flex-start;
       gap:.45rem;
-      flex:1 1 12rem;
+      flex:1 1 auto;
       min-width:0;
       background:none;
       border:none;
@@ -604,26 +607,26 @@
       color:var(--muted);
       font-weight:500;
     }
-    .consigne-card__inline-tools {
+    .consigne-card__inline-actions {
       display:inline-flex;
       align-items:center;
       gap:.3rem;
       flex:0 0 auto;
       flex-wrap:wrap;
     }
-    .consigne-card__inline-tools > * {
+    .consigne-card__inline-actions > * {
       flex-shrink:0;
     }
     .consigne-card__field-store {
       display:none;
     }
     @media (max-width: 640px) {
-      .consigne-card__header {
+      .consigne-card__header-row {
         align-items:flex-start;
-        gap:.35rem .5rem;
+        gap:.3rem .5rem;
       }
-      .consigne-card__inline-tools {
-        gap:.3rem;
+      .consigne-card__inline-actions {
+        gap:.25rem;
       }
       .consigne-card__value {
         width:auto;
