Neutralize high priority surface background

--- a/index.html
+++ b/index.html
@@ -886,8 +886,8 @@
       vertical-align:middle;
     }
     .priority-surface-high {
-      background:#fffbeb;
-      border:1px solid rgba(250,204,21,.35);
+      background:#ffffff;
+      border:1px solid #e2e8f0;
       box-shadow:none;
     }
     .priority-surface-medium {
@@ -901,8 +901,8 @@
     }
 
     .consigne-card.priority-surface-high {
-      background:#fffbeb;
-      border:1px solid rgba(250,204,21,.35);
+      background:#ffffff;
+      border:1px solid #e2e8f0;
       box-shadow:none;
     }
     .consigne-card.priority-surface-low {
